	- Added a reminder table to the database

- Changed all embeds that weren't already useing the embedColor from /config/config.json to do so

- Updates to /commands/Monetary/daily.js
	- getTime function updated to allow for both singular and plural hours and minutes
	- Removed the user parameter from the checkTime function
	- Changed one year streak bonus to 75,000 credits
	- Added a 25,000 credit bonus for a 100 day streak

- Slightly updated wording in /commands/Monetary/slots.js

- Improved stability in /commands/Monetary/trivia.js

- Slightly updated wording in /commands/Music/np.js

- Changes to /commands/Utilities/help.js
	- Removed the dash from the dm parameter
	- The help message is now sent in the channel by default instead of a dm
	- Changed the DM success emoji to a checkmark
	- Removed the all parameter

- Updated /commands/Utilities/invite.js to dynamically create message based off the contents of invite and supportLink in /config/config.json

- Updated /handlers/Main/Command-Handler/command-handler.js
	- Updated error message when a command fails
	- Added a check to make sure the error channel exists

- Added /handlers/Main/Error-Logs/

- Updated /handlers/Main/Startup/startup.js
	- Changed wording of a couple comments
	- Updated the status interval function
		- Added a check for the status array in /config/config.json
		- Added support for the {users} and {guilds} parameters
	- Added a check for startupNotification in /config/config.json
	- Changed the startup notification to ping the bot owner from config/config.json

- Changed the variable name in /commands/Utilities/ping.js to ping instead of mess

- Changes to /commands/Fun/uno.js
	- Complete rewrite
	- Added /handlers/Uno/uno.js to handle all game logic
	- /commands/Fun/uno.js is now used only for the ui/interface aspects
	- Added more info on the game message
	- Fixed tons of bugs
	- Better game logic
	- Probably a ton more changes that I can't remember
